# src/app/api/activities/route.ts
@@ -54,6 +54,7 @@ export async function POST(request: NextRequest) {
       hasPoop,
       hasPee,
       poopColor,
+      poopPhotoUrl,
       peeAmount,
       burpSuccess,
       duration,
@@ -69,6 +70,7 @@ export async function POST(request: NextRequest) {
         hasPoop,
         hasPee,
         poopColor,
+        poopPhotoUrl,
         peeAmount,
         burpSuccess,
         duration,
